# Aslan-AI

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  dump.rdb  railway.json
.github/workflows/: build.yml
alpaca-api/: Cargo.toml
alpaca-api/src/: lib.rs
aslan-bootstrap/: Cargo.toml
aslan-bootstrap/src/: lib.rs
aslan-core/: Cargo.toml
aslan-core/src/: main.rs
aslan-core/src/api/: job.rs  mod.rs  model.rs  predict.rs  task.rs
aslan-core/src/core/: dataset.rs  mod.rs  model.rs  training.rs
aslan-core/src/db/: mod.rs  mongodb.rs  rabbitmq.rs
aslan-core/src/helpers/: dataparser.rs  mod.rs
aslan-core/src/transformer/: embedding.rs
aslan-core/src/types/: app_state.rs
aslan-data/: Cargo.toml
aslan-data/src/: chunk_schema.rs  input_schema.rs  lib.rs  node_schema.rs
aslan-wavereduce/: Cargo.toml
aslan-wavereduce/src/: lib.rs
