[package]
name = "aslan-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.24.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.29.0", features = ["lazy"] }